crates/wac-parser/tests/resolution/fail/missing-method.wac
package test:comp;

import x: interface {
    resource r;
    f: func(r: r);
};

let i = new foo:bar { x };
